--- a/_posts/浏览器原理相关内容/2021-04-11-09 闭包.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-09 闭包.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     09 作用域链和闭包
+title:     09 闭包
 subtitle:  
 date:       2021-04-11
 author:     
@@ -12,36 +12,16 @@ typora-root-url: ..
 ---
 
 
-# 09 作用域链和闭包
+# 09 闭包
 
-先开看一段代码：输出的结果应该是什么？ -- bye，坑
-
-原因：JavaScript **作用域链是由词法作用域决定**的，**词法作用域就是根据代码的位置来决定**的，详见下文分析
-
-<img src="/../img/assets_2019/image-20210411104738718.png" alt="image-20210411104738718" style="zoom:20%;" />
-
-### 作用域链
-作用域链：JavaScript 引擎首先会在“当前的执行上下文”中查找该变量，如果在当前的变量环境中没有查找到，那么 JavaScript 引擎会继续**在 outer 所指向的执行上下文**中查找。
-
-注意：在每个执行上下文的变量环境中，都包含了一个**外部引用**，用来指向外部的执行上下文，我们把这个外部引用称为outer 
-
-<img src="/../img/assets_2019/image-20210411104928271.png" alt="image-20210411104928271" style="zoom:30%;" />
-
-### 词法作用域(outer来源)
-
-词法作用域定义：指作用域是由代码中 **函数声明的位置** 来决定的。
-
-<img src="/../img/assets_2019/image-20210411105118567.png" alt="image-20210411105118567" style="zoom:30%;" />
-
-JavaScript **作用域链是由词法作用域决定**的，**词法作用域就是根据代码的位置来决定**的。
-
-### 块级作用域链
-<img src="/../img/assets_2019/image-20210411105239990.png" alt="image-20210411105239990" style="zoom:35%;" />
-
-## 闭包
 #### 理论：
 
 ​	在 JavaScript 中，根据 **词法作用域** 的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，**即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中**，我们就把这些变量的集合称为闭包。
+
+#### 闭包优缺点：
+
+- 优点：① 能够读取函数内部的变量；②让这些变量一直存在于内存中，不会在调用结束后被垃圾回收机制回收；
+- 缺点：由于闭包会使用函数中的变量存在在内存中，内存消耗很大，所以不能滥用闭包；解决的办法是**退出函数之前，将不使用的局部变量删除**；
 
 #### 产生闭包的核心：
 
@@ -70,8 +50,6 @@ var bar = foo()
 bar.setName(" 极客邦 ")
 bar.getName()
 ```
-从调用栈来理解闭包：
-
 1、当 `JavaScript` 引擎执行到 `foo()` 时，首先会编译，并创建一个空 **执行上下文** ，执行栈如下：
 
 <img src="/../img/assets_2019/image-20210411105752559.png" alt="image-20210411105752559" style="zoom:30%;" />
@@ -92,6 +70,41 @@ bar.getName()
 当前执行上下文–> foo 函数闭包 –> 全局执行上下文
 
 <img src="/../img/assets_2019/image-20210411110043855.png" alt="image-20210411110043855" style="zoom:30%;" />
+
+常见考题：
+
+案例1：全部输出 3 
+
+```js
+// 下题并没有形成闭包
+var data = [];
+for (var i = 0; i < 3; i++) {
+    data[i] = function () {
+        console.log(i);
+    };
+}
+
+data[0](); // 3
+data[1](); // 3
+data[2](); // 3
+```
+
+案例2：形成闭包
+
+```js
+var data = [];
+for (var i = 0; i < 3; i++) {
+    data[i] = (function (i) {
+        return function(){
+            console.log(i);
+        }
+    })(i);
+}
+
+data[0](); // 0
+data[1](); // 1
+data[2](); // 2
+```
 
 
 
