add：new 操作符的实现

--- a/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
@@ -34,6 +34,9 @@ typora-root-url: ..
 
  #### 1、call/apply/bind函数
 通过`call/apply/bind`函数 **显式改变** `this`指向
+
+`call`是立即执行传递this的；`bind`不是立即执行的，返回的是函数的副本；
+
 ```javascript
 let bar = {
   myName : " 极客邦 ",
@@ -63,13 +66,13 @@ var myObj = {
 myObj.showThis()
  ```
 
-原因：JS执行引擎在执行 `myObj.showThis()`时，将其转化成 `call` 函数执行，代码如：
+原因：JS执行引擎在执行 `myObj.showThis()`时，实际上是<span style="color:red">将其转化成 `call` 函数执行</span>，代码如：
 ```javascript
 myObj.showThis.call(myObj);
 ```
 
  #### 3、通过构造函数设置
-    通过 new 关键字构建了一个新对象，并且构造函数中的 this 其实就是新对象本身
+通过 new 关键字构建了一个新对象，并且构造函数中的 **this 其实就是新对象本身**
  ```js
 function CreateObj(){
   this.name = " 极客时间 "
@@ -78,20 +81,36 @@ var myObj = new CreateObj()
  ```
 
 我们复习一下，JS引擎在`new`一个构造函数的时候，做了四件事：
--   首先创建了一个空对象 `tempObj`；
--   接着调用 `CreateObj.call` 方法，并将 `tempObj` 作为 call 方法的参数，这样当 `CreateObj` 的执行上下文创建时，它的 this 就指向了 `tempObj` 对象
--   然后执行 `CreateObj` 函数，此时的 `CreateObj` 函数执行上下文中的 this 指向了 `tempObj` 对象；
--   最后返回 tempObj 对象
+-   首先**创建了一个新对象** `tempObj`；
+-   接着将构造函数的**作用域赋给新对象** —> <span style="color:red">调用 `CreateObj.call` 方法</span>，并将 `tempObj` 作为 call 方法的参数，这样当 `CreateObj` 的执行上下文创建时，它的 this 就指向了 `tempObj` 对象
+-   然后执行构造函数中的代码（**为这个新函数添加属性**） —> 执行 `CreateObj` 函数，此时的 `CreateObj` 函数执行上下文中的 this 指向了 `tempObj` 对象；
+-   最后**返回**新对象： `tempObj` 对象
 
 用代码来表示就是：
 ```js
-var tempObj = {}
-CreateObj.call(tempObj);
+var tempObj = {} // 或者 var obj = new Object();
+tempObj.__proto__ = CreateObj.prototype;//设置原型链
+CreateObj.call(tempObj); // 改变 this 指向并执行
 return tempObj;
 ```
 
+自己实现一个 `new` 操作符
+
+```js
+function objectFactory() {
+    var obj = new Object(),
+    Constructor = [].shift.call(arguments);
+    obj.__proto__ = Constructor.prototype;
+    var ret = Constructor.apply(obj, arguments);
+    return typeof ret === 'object' ? ret : obj;
+};
+```
+
+
+
 ## this 的缺陷
-    this 没有作用域的限制
+
+this 没有作用域的限制
 
 ### 1. 嵌套函数中的 this 不会从外层函数中继承
 ```js
@@ -112,6 +131,8 @@ myObj.showThis()
     本质：把 this 体系转换为了作用域的体系
 
 解决方案2：**箭头函数 -> 不会创建自身的执行上下文，取决于外部函数**
+
+ —> 箭头函数中的this指向**定义时**当前周围的作用域（词法环境）
 
      ES6 中的箭头函数并不会创建其自身的执行上下文，所以箭头函数中的 this 取决于它的外部函数
 
