--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -20,6 +20,9 @@ typora-root-url: ..
 <img src="/../img/assets_2019/image-20210410153313919.png" alt="image-20210410153313919" style="zoom:50%;" />
 
 编译阶段会生成两部分内容：
+
+<img src="/../img/assets_2019/v2-56c41fd7a967f8ee02c09da80cabbb7d_r.png" alt="preview" style="zoom:80%;" />
+
 -   创建执行上下文 The Creation Phase
 -   可执行代码
 ### 创建执行上下文（Execution context）
@@ -30,13 +33,13 @@ typora-root-url: ..
 
 1、**this**
 
-2、**作用域链** (Scope chain) - **词法环境**：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
+2、建立 **作用域链** (Scope chain) - **词法环境**：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
 
-3、**变量对象** (Variable object，VO) - 保存了**变量提升**的内容
+3、生成 **变量对象** (Variable object，VO) - 保存了**变量提升**的内容
 
+详解如下：
 
-
-- **this** 值的决定，即我们所熟知的 **This 绑定**
+- 1、**this** 值的决定，即我们所熟知的 **This 绑定**
 
     - 全局执行上下文中 —> `this` 指向**全局对象**（浏览器中 - `window`）
 
@@ -58,7 +61,7 @@ typora-root-url: ..
         bar();       // 'this' 指向全局 window 对象，因为没有指定引用对象
         ```
 
-- 作用域链 - 创建**词法环境**组件 — `let/const`
+- 2、作用域链 - 创建**词法环境**组件 — `let/const`
 
     - 定义：
 
@@ -69,9 +72,23 @@ typora-root-url: ..
         - **全局环境** 没有外部环境引用的词法环境 -> `null`；环境记录器用于定义全局上下文中的变量和函数
         - **函数环境** 外部环境引用可能是全局环境，也可能是任何包含此内部函数的外部函数；环境记录起用于存储变量、函数、参数
 
-- 创建**变量环境**组件 — `var`
+- 3、创建 **变量环境** 组件 — `var`
 
     - 定义：同样是一个词法环境，其环境记录器持有 **变量声明语句** 在执行上下文中创建的**绑定关系**
+
+    - 过程：
+
+        <img src="/../img/assets_2019/v2-7f8a55ab52ca0e6714060e1c1d28d32a_r.png" alt="preview" style="zoom:70%;" />
+
+        —> 首先 **建立arguments对象（函数参数）** ：检查当前上下文中的参数，建立该对象下的属性与 属性值
+
+        —>  其次**会处理函数声明** ：在变量对象中以函数名建立一个属性，属性值为指向该函数所在内存地址的引用
+
+        —> 再会 **处理变量声明**，变量对象中以变量名建立一个属性，属性值为 `undefined`，如果变量与函数同名，则 <u>在这个阶段</u>，以函数值为准，如下例子：
+
+        ![image-20210706175225514](/../img/assets_2019/image-20210706175225514.png)
+
+        <img src="/../img/assets_2019/image-20210707081437751.png" alt="image-20210707081437751" style="zoom:35%;" />
 
 ## 2、执行阶段
 按照顺序一行一行地执行可执行代码
