modify：复习数组去重

--- a/_posts/JS原生基础相关/2019-06-10-数据类型.md
+++ b/_posts/JS原生基础相关/2019-06-10-数据类型.md
@@ -80,6 +80,7 @@ console.log(sum == 0.3);//false
 ```javascript
 var num;//声明了,没有赋值,undefined
 console.log(num + 10 == NaN);//false
+console.log(NaN === NaN); // false
 ```
 > isNaN()判断的值是：undefined、NaN、{}对象---true；否则--- false；
 
