--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -22,51 +22,50 @@ typora-root-url: ..
 **for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
 
 ```javascript
-        function unique(arr) {
-            var result = [],
-                hash = {}; //定义新数组result ,定义hash.
-            for (let elem of arr) { 
-// 遍历前四个数时，hash表中没有这四个值，所以if语句成立，将数据push到result中，令这些表中的数都为true。
-// 当遍历到第二个1的时候，之前已经令hash[elem] = true , 所以if语句就不执行了，就不会重复了
-                if (!hash[elem]) {
-                    result.push(elem);
-                    hash[elem] = true;//作为一个是否在数组中存在的标志
-                }
-            }
-            return result;
+function unique(arr) {
+    var result = [];
+    var hash = {};
+    for (let elem of arr) { 
+        if (!hash[elem]) {
+            result.push(elem);
+            hash[elem] = true; //作为一个是否在数组中存在的标志
         }
-        var arr = [1, 23, 34, 45, 1, 6, 4, 23];
-        unique(arr);//[1, 23, 34, 45, 6, 4]
-```
-
-### 方法二：遍历数组，用indexOf() / includes()
-
-思路1：新建一个数组result，遍历原数组，当`arr[i]`不存在于新数组中，就添加`push`进新数组，得到的新数组就是不重复的。
-
-```javascript
-
-function unique(arr){
-  var result=[];
-  for (var i = 0; i < arr.length; i++) {
-     if(result.indexOf(arr[i])==-1){ //indexOf等于-1时代表数组中没有该值
-      result.push(arr[i]);
-     }
-  }
-  return result;
+    }
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
 
-思路2：新建一个数组`result`，如果新数组中该值`i`不存在，则将原数组内容添加`push(i)`。
+### 方法二：遍历数组，用indexOf() / includes()
+
+思路1 - `indexOf`：新建一个数组 `result`，遍历原数组，当`arr[i]`不存在于新数组中，就添加 `push` 进新数组，得到的新数组就是不重复的。
+
+```javascript
+function unique(arr){
+    let res = [];
+    for(let item of arr) {
+        if(res.indexOf(item) === -1) {
+            res.push(item);
+        }
+    }
+    return res
+}
+var arr = [1, 23, 34, 45, 1, 6, 4, 23];
+unique(arr);//[1, 23, 34, 45, 6, 4]
+```
+
+思路2 - `includes`：新建一个数组`result`，如果新数组中该值`i`不存在，则将原数组内容添加`push(i)`。
 
 **for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
 
 ```javascript
 function unique(arr) {
     let result = [];
-    for (let i of arr) { 
-        !result.includes(i) && result.push(i);
+    for(let item of arr) {
+        if(!res.includes(item)) {
+            res.push(item);
+        }
     }
     return result;
 }
@@ -78,17 +77,17 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 ### 方法三：数组下标判断法
 
-思路1：利用indexOf返回的始终是第一个相同数值的下标，如果新增的内容在原来数组中的下标和现在的下标不同，那么就证明它是重复的
+思路1：利用 `indexOf` 返回的始终是第一个相同数值的下标，如果新增的内容在原来数组中的下标和现在的下标不同，那么就证明它是重复的
 
 ```javascript
 function unique(arr){
-  var result=[];
-  for (var i = 0; i < arr.length; i++) {
-     if(arr.indexOf(arr[i])==i){//下标不同，代表了重复
-      	result.push(arr[i]);
-     }
-  }
-  return result;
+    var result=[];
+    for (var i = 0; i < arr.length; i++) {
+        if(arr.indexOf(arr[i]) === i){ //下标不同，代表了重复
+            result.push(arr[i]);
+        }
+    }
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -98,13 +97,13 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 ```javascript
 function unique(arr){
-  var result=[];
-  for (var i = 0; i < arr.length; i++) {
-     if(arr.indexOf(arr[i])==arr.lastIndexOf(arr[i])){
-      	result.push(arr[i]);
-     }
-  }
-  return result;
+    var result=[];
+    for (var i = 0; i < arr.length; i++) {
+        if(arr.indexOf(arr[i]) === arr.lastIndexOf(arr[i])){
+            result.push(arr[i]);
+        }
+    }
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[34, 45, 6, 4]
@@ -118,15 +117,14 @@ unique(arr);//[34, 45, 6, 4]
 
 ```javascript
 function unique(arr){
-  arr.sort();
-  var result=[arr[0]];
-  for (var i = 1; i < arr.length; i++) {
-     if(arr[i]!=result[result.length-1]){
-      	result.push(arr[i]);
-     }
-      //这里的if循环可以简写成 arr[i] !== arr[i-1] && result.push(arr[i])
-  }
-  return result;
+    arr.sort();
+    var result=[arr[0]];
+    for (var i = 1; i < arr.length; i++) {
+        if(arr[i] !== result[result.length-1]){
+            result.push(arr[i]);
+        }
+    }
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 4, 45, 6]
@@ -140,7 +138,7 @@ let result = arr.sort().reduce((init, current) => {
     if(init.length === 0 || init[init.length-1] !== current) {
         init.push(current);
     }
-  // 这里的if也可以使用indexOf方法进行判断是否等于-1
+    // 这里的if也可以使用indexOf方法进行判断是否等于-1
     return init;
 }, []);
 console.log(result); // [1, 23, 34, 4, 45, 6]
@@ -154,16 +152,16 @@ console.log(result); // [1, 23, 34, 4, 45, 6]
 
 ```javascript
 function unique(arr){
-  var result=[];
-  for (var i = 0; i < arr.length; i++) {
-    for (var j = i+1; j < arr.length; j++) {
-      if(arr[i]===arr[j]){
-        ++i;
-      }
+    var result=[];
+    for (var i = 0; i < arr.length; i++) {
+        for (var j = i+1; j < arr.length; j++) {
+            if(arr[i]===arr[j]){
+                ++i;
+            }
+        }
+        result.push(arr[i]);
     }
-      result.push(arr[i]);
-  }
-  return result;
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[34, 45, 1, 6, 4, 23]注意这里的顺序和上面的都不同
@@ -197,10 +195,12 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 ```javascript
 function unique(arr){
-  	var x = new Set(arr);
- 	return [...x];//这里直接返回x的话，结果是Set(6){1, 23, 34, 45, 6, 4}
-    //上面的两行代码可以简写成：
-  return Array.from(new Set([...arr]))
+    var x = new Set(arr);
+    return [...x]; // 这里直接返回x的话，结果是Set(6){1, 23, 34, 45, 6, 4}
+}
+// 或者简写成
+function unique(arr){
+    return [...new Set(arr)]
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -218,9 +218,9 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 思路：利用`Array.filter()`方法的过滤方法，将数组进行过滤，筛选条件是数组下标与检索下标一致。
 
-`concat() `方法用于连接两个或多个数组；该方法不会改变现有的数组，而仅仅会返回被连接数组的一个副本。
+`concat() ` 方法用于连接两个或多个数组；该方法**不会改变现有的数组**，而仅仅会返回被连接数组的一个副本。
 
-filter() 方法通过检查指定数组中符合条件的所有元素；不会改变原始数组，创建一个新的数组。
+`filter()`方法通过检查指定数组中符合条件的所有元素；**不会改变原始数组**，创建一个新的数组。
 
 ```javascript
 function unique(arr) {
