add：reduce - 重写三个经典案例

--- a/_posts/2020-03-24-数组方法统计.md
+++ b/_posts/2020-03-24-数组方法统计.md
@@ -195,95 +195,21 @@ arr.fill(value[, start[, end]])
 - `currentIndex 当前索引`
 - `array 数组`
 
-回调函数第一次执行时，`accumulator` 和`currentValue`的取值有两种情况：如果调用`reduce()`时提供了`initialValue`，`accumulator`取值为`initialValue`，`currentValue`**取数组中的第一个值**；如果没有提供 `initialValue`，那么`accumulator`取数组中的第一个值，`currentValue`**取数组中的第二个值**。
+举个例子，详细看下一篇 reduce 的博客
 
-```javascript
-arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue])
+```js
+const array1 = [1, 2, 3, 4];
+const reducer = (pre, cur) => {
+	console.log(pre, cur);
+  	return pre + cur;
+}
+console.log(array1.reduce(reducer, 5));
+> 5 1
+> 6 2
+> 8 3
+> 11 4
+> 15
 ```
-
-```javascript
-// 按属性对Object进行分类
-var people = [{ name: 'Alice', age: 21 },{ name: 'Max', age: 20 },{ name: 'Jane', age: 20 }];
-
-function groupBy(objectArray, property) {
-  return objectArray.reduce(function (acc, obj) {
-    var key = obj[property];
-    if (!acc[key]) {
-      acc[key] = [];
-    }
-    acc[key].push(obj);
-    return acc;
-  }, {});
-}
-
-var groupedPeople = groupBy(people, 'age');
-// groupedPeople is:
-// { 
-//   20: [
-//     { name: 'Max', age: 20 }, 
-//     { name: 'Jane', age: 20 }
-//   ], 
-//   21: [{ name: 'Alice', age: 21 }] 
-// }
-```
-
-```javascript
-// 按序运行Promise
-function runPromiseInSequence(arr, input) {
-  return arr.reduce(
-    (promiseChain, currentFunction) => promiseChain.then(currentFunction),
-    Promise.resolve(input)
-  );
-}
-
-// promise function 1
-function p1(a) {
-  return new Promise((resolve, reject) => {
-    resolve(a * 5);
-  });
-}
-
-// promise function 2
-function p2(a) {
-  return new Promise((resolve, reject) => {
-    resolve(a * 2);
-  });
-}
-
-// function 3  - will be wrapped in a resolved promise by .then()
-function f3(a) {
- return a * 3;
-}
-
-// promise function 4
-function p4(a) {
-  return new Promise((resolve, reject) => {
-    resolve(a * 4);
-  });
-}
-
-const promiseArr = [p1, p2, f3, p4];
-runPromiseInSequence(promiseArr, 10)
-  .then(console.log);   // 1200
-```
-
-```javascript
-// 使用reduce实现map
-if (!Array.prototype.mapUsingReduce) {
-  Array.prototype.mapUsingReduce = function(callback, thisArg) {
-    return this.reduce(function(mappedArray, currentValue, index, array) {
-      mappedArray[index] = callback.call(thisArg, currentValue, index, array);
-      return mappedArray;
-    }, []);
-  };
-}
-
-[1, 2, , 3].mapUsingReduce(
-  (currentValue, index, array) => currentValue + index + array.length
-); // [5, 7, , 10]
-```
-
-
 
 **every( )  遍历检测**
 
