--- a/_posts/css相关内容/2021-06-28-CSS模块化.md
+++ b/_posts/css相关内容/2021-06-28-CSS模块化.md
@@ -31,7 +31,7 @@ typora-root-url: ..
   - 导入样式，只能放在 style 标签/css文件的第一行（`charset` 规则下方也可），放其他行则会无效
   - `@impor`t 声明的样式表**不能充分利用浏览器并发请求**资源的行为（`link`标签引入的文件会并发请求），其加载行为会在页面全部被加载后才被加载 -> CSS 解析延迟 -> 阻塞 JS 解析
     * “IE会先加载整个HTML文档的DOM，然后再去导入外部的CSS文件，因此，在页面DOM加载完成到CSS导入完成中间会有一段时间页面上的内容是没有样式的”。
-  - 由于 @import 样式表的延后加载，可能会导致页面样式闪烁
+  - 由于 @import 样式表的 **延后加载**，可能会导致页面样式闪烁
 
 
 
