modify：复习回流重绘+优化方法

--- a/_posts/浏览器原理相关内容/2021-04-14-21 html+js+css是如何解析渲染的.md
+++ b/_posts/浏览器原理相关内容/2021-04-14-21 html+js+css是如何解析渲染的.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     21 CSS如何影响首次加载时的白屏时间？
+title:     21 html+js+css是如何解析渲染的
 subtitle:  
 date:       2021-04-14
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 21 CSS如何影响首次加载时的白屏时间？
+# 21 html+js+css是如何解析渲染的
 
 ###  CSS 是如何工作的
 #### 1/3、html + css 文件的渲染流程分析
@@ -61,8 +61,6 @@ typora-root-url: ..
 ### 优化首屏体验
 
 #### 视觉阶段
-
-
 
 1、发起主页面 `HTML` 请求后，在网络进程拿到数据喂给 `渲染进程` 前 --> 页面还是展示的原来的页面
 
