--- a/_posts/浏览器原理相关内容/2021-04-14-22 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-14-22 回流重绘+分层合成机制.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     22 浏览器分层合成机制
+title:     22 回流/重绘+分层合成机制
 subtitle:  
 date:       2021-04-14
 author:     
@@ -12,9 +12,11 @@ typora-root-url: ..
 ---
 
 
-# 22 浏览器分层合成机制
+# 22 回流/重绘+分层合成机制
 
 配合博文一起看：05 渲染流程：HTML、CSS和JavaScript是如何变成页面的
+
+参考另一篇博文：[回流/重绘](https://juejin.cn/post/6844904083212468238)
 
 ### 帧 + 帧率
 - 显示器怎么显示图像？
@@ -67,19 +69,55 @@ typora-root-url: ..
 
 - 3、Layout <span style="color:red">**回流 reflow**</span>  - `Update Layer Tree` 
 
-    - 定义：根据 `CSSOM` + `DOM` 计算每个 DOM 元素在最终屏幕上显示的大小和位置 -  即 <span style="color:red">**计算布局**</span> --> 整个渲染流水线（从 html 开始递归往下计算尺寸和位置开始）的每个阶段都要执行一遍；
-    - 触发事件：引起了页面上某些元素的 <span style="color:red">**占位面积、定位方式、边距等属性**</span> 的变化，都会引起它内部、周围甚至整个页面的重新渲 染
+    - **定义**：根据 `CSSOM` + `DOM` 计算每个 DOM 元素在最终屏幕上显示的大小和位置 -  即 <span style="color:red">**计算布局**</span> --> 整个渲染流水线（从 html 开始递归往下计算尺寸和位置开始）的每个阶段都要执行一遍；
+
+    - **触发事件**
+
+        页面 <u>初始渲染</u>，这是开销最大的一次重排；
+
+        <u>添加/删除</u> 可见的DOM元素；
+
+        改变元素 <u>位置</u> ；
+
+        改变元素 <u>尺寸</u>，比如边距、填充、边框、宽度和高度等；
+
+        改变元素 <u>内容</u>，比如文字数量，图片大小等；
+
+        改变元素 <span style="color:red"><u>字体大小</u></span>；
+
+        改变浏览器 <u>窗口尺寸</u>，比如 resize 事件发生时；
+
+        <span style="color:red"><u>激活CSS伪类</u></span>（例如：`:hover`）；
+
+        设置 <u>style 属性的值</u>，因为<span style="color:red">通过设置style属性改变结点样式的话，每一次设置都会触发一次reflow</span> ；
+
+        查询某些属性或调用某些计算方法：<u>`offsetTop`, `offsetLeft`, `offsetWidth`, `offsetHeight`；`scrollTop`/Left/Width/Height；`clientTop`/Left/Width/Height；`width`,`height`；调用了`getComputedStyle()`, 或者 IE的 `currentStyle()`</u> 等，原理是一样的，都为求一个“即时性”和“准确性”。
 
 - 4、Paint <span style="color:red">**重绘 rePaint**</span> - `Paint` 
 
-    - 定义：在多个层上绘制 DOM 元素样式 没有计算布局 --> 依然需要计算绘制信息（样式）
-    - 触发事件：改变某个元素的 <span style="color:red">**背景色、文字颜色、边框颜色等等不影响它周围或内部布局的属性**</span> 时，屏幕的一部分要重画，但是元素的几何尺寸没有变
+    - **定义**：元素的外观发生改变，但没有改变布局 —> 依然需要计算绘制信息（样式）
+    - **触发事件**：改变某个元素的 <span style="color:red">**背景色、文字颜色、边框颜色等等不影响它周围或内部布局的属性**</span> 时，屏幕的一部分要重画，但是元素的几何尺寸没有变
 
 - 5、Composite 渲染层合并：`Composite Layers` 
 
     在每个层上完成绘制过程之后，浏览器会将所有层按照合理的顺序合并成一个图层，然后显示在屏幕上。
 
-    
+关于 `display:none` 和 `visibility:hidden`：
+
+- `display：none` 指的是元素完全不陈列出来，**不占据空间**，涉及到了DOM结构，故产生 `回流+重绘`
+- `visibility：hidden` 指的是元素**不可见但存在**，保留空间，不影响结构，故只产生 `重绘`
+
+##### 减少重排次数的几种方法：
+
+- 1、样式集中改变 - **更改类名** 而不是修改样式
+- 2、分离读写操作 - 浏览器渲染机制： 重排/重绘操作被触发后会被放进渲染队列，等到队列中的操作到了一定的数量或者到了一定的时间间隔时，浏览器才会 **批量执行* *这些操作
+- 3、将 DOM 离线，修改完样式后再放出来
+    -  `display:none`，只会触发 隐藏+显示 两次重排
+    - 创建新的 DOM 节点，操作完之后再添加到页面
+    - 复制节点，操作完之后替换原节点
+- 4、脱离文档流（`fixed`/`absolute`） - 利用分层，只有当前层需要重排，代价开销小
+- 5、优化动画 - 利用 GPU 加速：Canvas2D，布局合成, CSS3转换（transitions），CSS3 3D变换（transforms），WebGL和视频(video)。**使用css3硬件加速，可以让transform、opacity、filters这些动画不会引起回流重绘 。但是对于动画的其它属性，比如background-color这些，还是会引起回流重绘的，不过它还是可以提升这些动画的性能**
+
 #### 分层和合成流程
 
 如果没有分层 --> 从布局树直接生成目标图片的话，**每次很小的变化都会重排/重绘**；
@@ -120,3 +158,4 @@ typora-root-url: ..
 ```
 
 使用 transform 或者 opacity 来实现动画效果, 这样只需要做合成层的合并就好了
+
