--- a/_posts/2019-08-09-工作 防抖节流.md
+++ b/_posts/2019-08-09-工作 防抖节流.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      防抖节流
 subtitle:  
-date:       2019-08-09
+date:       2021-07-10
 author:     
 header-img: 
 catalog: true
@@ -13,116 +13,139 @@ typora-root-url: ..
 
 ##  防抖节流
 
-防抖、节流` https://segmentfault.com/a/1190000016261602 `这个写的很好，平时键盘抬起就会搜索，防抖后，间隔一段时间不输入才会搜索，节流后，可以做到不管是否停止打字，间隔一段时间都会搜索。
+[防抖、节流](https://segmentfault.com/a/1190000016261602) 这个写的很好，平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，可以做到不管是否停止打字，间隔一段时间都会搜索**。
 
-**函数防抖**(debounce)：在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
+- 总结 - 记住例子：
+
+    函数防抖 - 类似法师技能读条，还没读完条再按技能，会重新读条
+
+    函数节流 - 就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+
+- 防抖 `debounce` - 实际应用场景
+    - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
+    - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+- 节流 `throttle` - 实际应用场景
+    - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
+    - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
+
+### 函数防抖(debounce) - 节约开销
+
+在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
+
+案例：一段键盘输入就执行函数的代码 - 如图，存在抖动问题
 
 ```javascript
-/模拟一段ajax请求,只要按下键盘，就会触发这次ajax请求。
-/* ajax函数用来输出传入的参数*/
-function ajax(content) {
-  console.log('ajax request ' + content)
+// 只要按下键盘，就会触发这次ajax请求
+let ajax = (content) => {
+    console.log('ajax - ', content);
 }
-/* 通过id值获取到DOM标签*/
-let inputa = document.getElementById('unDebounce')
-
-inputa.addEventListener('keyup', function (e) {
-    ajax(e.target.value)
+let input = document.getElementById('input');
+input.addEventListener('keyup', (e) => {
+    ajax(e.target.value);
 })
 ```
 
-优化后：
+<img src="/img/assets_2019/image-20210710163059697.png" alt="image-20210710163059697" style="zoom:33%;" />
+
+将函数进行防抖处理 - 优化后：
 
 ```javascript
-/ 延迟执行ajax请求后，当你在频繁的输入时，并不会发送请求，只有当你在指定间隔内没有输入时，才会执行函数/
-/* ajax函数用来输出传入的参数*/
-function ajax(content) {
-  console.log('ajax request ' + content)
+// 通过防抖函数处理后，只有当你在指定间隔内（1s）没有输入时，才会执行函数
+let ajax = (content) => {
+    console.log('ajax - ', content);
 }
-/这里定义一个debounce函数，将传入的函数延迟5秒执行，如果间隔小于5秒，就会重新计时/
-function debounce(fun, delay) {
-    return function (args) {
-        let that = this
-        let _args = args
-        clearTimeout(fun.id)
-        fun.id = setTimeout(function () {
-            fun.call(that, _args)
+// 添加防抖处理
+let debounce = (callback, delay) => {
+    return (arguments) => {
+        // 清理定时器这一步十分关键 - 保证以 1s 为周期重新计数
+        clearTimeout(callback.timeId);
+        callback.timeId = setTimeout(() => {
+            callback.call(this, arguments);
         }, delay)
     }
 }
-/* 通过id值获取到DOM标签*/    
-let inputb = document.getElementById('debounce');
-/这是个函数，是debounce返回的函数/
-let debounceAjax = debounce(ajax, 500)
-/* 添加监听键盘抬起事件，每次弹起就执行后面的回调函数，即将输入内容传值给debounceAjax函数延迟执行ajax*/
-inputb.addEventListener('keyup', function (e) {
-        debounceAjax(e.target.value)
+let debounceAjax = debounce(ajax, 1000);
+// 给指定 input 添加监听函数
+let input = document.getElementById('input');
+input.addEventListener('keyup', (e) => {
+    debounceAjax(e.target.value);
 })
 ```
 
-**函数节流**：规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**【性能优化】
+<img src="/img/assets_2019/image-20210710163129879.png" alt="image-20210710163129879" style="zoom:33%;" />
 
-```javascript
-let biu = function () {
-    console.log('biu biu biu',new Date().Format('HH:mm:ss'))
-}
-setInterval(debounce(biu,500),1000)
-/*biu这个函数在第一次1.5s后执行，然后每隔1s执行一次*/
+补充：这里有一个很有趣的例子 - `setInterval` 里面包裹 `setTimeout`，讨论下时间
 
-let boom = function () {
-    console.log('boom boom boom',new Date().Format('HH:mm:ss'))
-}
-setInterval(debounce(boom,2000),1000)
-/*boom这个函数，一次都不会执行，函数执行事件是1s，但是函数间隔2s才会执行，每次2s还没到，就重新计时了*/
-```
+- 如果外部的 `delay` 时间大于 防抖的 `delay` 时间 - **函数最终以外部时间周期执行**：
 
-优化后
-
-```javascript
-    /在不断输入时，ajax会按照我们设定的时间，每1s执行一次
-	function throttle(fun, delay) {
-        let last, deferTimer
-        return function (args) {
-            let that = this
-            let _args = arguments
-            let now = +new Date()
-            if (last && now < last + delay) {
-                clearTimeout(deferTimer)
-                deferTimer = setTimeout(function () {
-                    last = now
-                    fun.apply(that, _args)
-                }, delay)
-            }else {
-                /如果现在=上一次的时间+延迟时间，那么就马上执行fun函数
-                last = now
-                fun.apply(that,_args)
-            }
-        }
+    ```js
+    let Junzhe = function () {
+        console.log('🌹🌹🌹🌹');
     }
+    
+    // 第一次 3秒，之后每次都是 2秒 执行一次
+    setInterval(debounce(Junzhe, 1000), 2000);
+    
+    // 第一次 4秒，之后每次都是 3秒 执行一次
+    setInterval(debounce(Junzhe, 1000), 3000);
+    ```
 
-	/*throttleAjax是个函数，*/
-    let throttleAjax = throttle(ajax, 1000);
+    原因分析如图：<img src="/img/assets_2019/image-20210710195651390.png" alt="image-20210710195651390" style="zoom:18%;" /><img src="/img/assets_2019/image-20210710195948437.png" alt="image-20210710195948437" style="zoom:18%;" />
 
-	/* 获取当前的DOM元素，并添加键盘抬起的监听事件，每次抬起就调用函数throttleAjax*/
-    let inputc = document.getElementById('throttle')
-    inputc.addEventListener('keyup', function(e) {
-        throttleAjax(e.target.value)
-    });
+- 如果外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行**：
 
-	/不管我们设定的执行时间间隔多小，总是1s内只执行一次。
-	let biubiu = function () {
-        console.log('biu biu biu', new Date().Format('HH:mm:ss'))
-    };
-    setInterval(throttle(biubiu,1000),10);
+    ```js
+    setInterval(debounce(Junzhe, 4000), 3000);
+    ```
+
+    原因分析如图：<img src="/../../../Library/Application Support/typora-user-images/image-20210710200524848.png" alt="image-20210710200524848" style="zoom:18%;" />
+
+### 函数节流 throttle - 性能优化
+
+规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
+
+在不断输入时，ajax会按照我们设定的时间，每1s执行一次：
+
+```javascript
+let throttle = (callback, delay) => {
+    let last;
+    return (arguments) => {
+        let now = +new Date();
+        if(last && now < last + delay) {
+            clearTimeout(callback.timeId);
+            callback.timeId = setTimeout(() => {
+                last = now;
+                callback.call(this, arguments)
+            }, delay)
+        } else {
+            // 如果现在 = 上一次的时间 + 延迟时间，那么就马上执行函数
+            last = now;
+            callback.call(this, arguments)
+        }
+
+    }
+}
+let throttleAjax = throttle(ajax, 1000);
+
+let input3 = document.getElementById('input3')
+input3.addEventListener('keyup', (e) => {
+    throttleAjax(e.target.value);
+});
 ```
 
-总结：函数防抖，类似法师技能读条，还没读完条再按技能，就会重新读条，但是会出现一直读条不能放技能的状况；函数节流，就是一直按着技能键，也能在规定时间内发技能。
+<img src="/img/assets_2019/image-20210710203800964.png" alt="image-20210710203800964" style="zoom:33%;" />
 
-- 函数防抖和函数节流都是防止某一时间频繁触发，但是这两兄弟之间的原理却不一样。
-- 函数防抖是某一段时间内只执行一次，而函数节流是间隔时间执行。
-- debounce
-  - search搜索联想，用户在不断输入值时，用防抖来节约请求资源。
-  - window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
-- throttle
-  - 鼠标不断点击触发，mousedown(单位时间内只触发一次)
-  - 监听滚动事件，比如是否滑到底部自动加载更多，用throttle来判断
+解决上文外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行** 
+
+```js
+// 不管我们设定的执行时间间隔多小，总是1s内只执行一次。
+setInterval(throttle(jun,3000),2000);
+```
+
+看一下打印结果：
+
+<img src="/img/assets_2019/image-20210711133823106.png" alt="image-20210711133823106" style="zoom:33%;" />
+
+分析 - 利用定时执行函数里面 `now` 的**闭包**，将 last 时间设置成定时任务开始的时间：
+
+<img src="/img/assets_2019/image-20210711133948409.png" alt="image-20210711133948409" style="zoom:30%;" />
