modify：防抖节流深入理解 - 添加原理说明

--- a/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
+++ b/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
@@ -15,15 +15,22 @@ typora-root-url: ..
 
 [防抖、节流](https://segmentfault.com/a/1190000016261602) 这个写的很好，平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，可以做到不管是否停止打字，间隔一段时间都会搜索**。
 
+还参考了另一篇博文：[JavaScript专题之跟着underscore学防抖](https://github.com/mqyqingfeng/Blog/issues/22)
+
 - 总结 - 记住例子：
 
-    函数防抖 - 类似法师技能读条，还没读完条再按技能，会重新读条
+    **函数防抖** - 类似法师技能读条，还没读完条再按技能，会重新读条
 
-    函数节流 - 就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+    - 防抖的原理就是：你尽管触发事件，但是我一定 **在事件触发 n 秒后才执行**，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就 **以新的事件的时间为准，n 秒后才执行**，总之，就是要等你 **触发完事件 n 秒内不再触发事件，我才执行**，真是任性呐!
+
+    **函数节流** - 就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+
+    - 如果你持续触发事件，每隔一段时间，只执行一次事件
 
 - 防抖 `debounce` - 实际应用场景
     - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
     - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+    
 - 节流 `throttle` - 实际应用场景
     - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
     - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
@@ -45,7 +52,7 @@ input.addEventListener('keyup', (e) => {
 })
 ```
 
-<img src="/img/assets_2019/image-20210710163059697.png" alt="image-20210710163059697" style="zoom:33%;" />
+<img src="/../img/assets_2019/image-20210710163059697.png" alt="image-20210710163059697" style="zoom:33%;" />
 
 将函数进行防抖处理 - 优化后：
 
@@ -72,7 +79,7 @@ input.addEventListener('keyup', (e) => {
 })
 ```
 
-<img src="/img/assets_2019/image-20210710163129879.png" alt="image-20210710163129879" style="zoom:33%;" />
+<img src="/../img/assets_2019/image-20210710163129879.png" alt="image-20210710163129879" style="zoom:33%;" />
 
 补充：这里有一个很有趣的例子 - `setInterval` 里面包裹 `setTimeout`，讨论下时间
 
@@ -90,7 +97,7 @@ input.addEventListener('keyup', (e) => {
     setInterval(debounce(Junzhe, 1000), 3000);
     ```
 
-    原因分析如图：<img src="/img/assets_2019/image-20210710195651390.png" alt="image-20210710195651390" style="zoom:18%;" /><img src="/img/assets_2019/image-20210710195948437.png" alt="image-20210710195948437" style="zoom:18%;" />
+    原因分析如图：<img src="/../img/assets_2019/image-20210710195651390.png" alt="image-20210710195651390" style="zoom:18%;" /><img src="/../img/assets_2019/image-20210710195948437.png" alt="image-20210710195948437" style="zoom:18%;" />
 
 - 如果外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行**：
 
@@ -98,9 +105,7 @@ input.addEventListener('keyup', (e) => {
     setInterval(debounce(Junzhe, 4000), 3000);
     ```
 
-    原因分析如图：<img src="/../../../Library/Application Support/typora-user-images/image-20210710200524848.png" alt="image-20210710200524848" style="zoom:18%;" />
-
-### 函数节流 throttle - 性能优化
+    原因分析如图：<img src="/../img/assets_2019/image-20210710200524848.png" alt="image-20210710200524848" style="zoom:18%;" />
 
 规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
 
@@ -133,7 +138,7 @@ input3.addEventListener('keyup', (e) => {
 });
 ```
 
-<img src="/img/assets_2019/image-20210710203800964.png" alt="image-20210710203800964" style="zoom:33%;" />
+<img src="/../img/assets_2019/image-20210710203800964.png" alt="image-20210710203800964" style="zoom:33%;" />
 
 解决上文外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行** 
 
@@ -144,8 +149,8 @@ setInterval(throttle(jun,3000),2000);
 
 看一下打印结果：
 
-<img src="/img/assets_2019/image-20210711133823106.png" alt="image-20210711133823106" style="zoom:33%;" />
+<img src="/../img/assets_2019/image-20210711133823106.png" alt="image-20210711133823106" style="zoom:33%;" />
 
 分析 - 利用定时执行函数里面 `now` 的**闭包**，将 last 时间设置成定时任务开始的时间：
 
-<img src="/img/assets_2019/image-20210711133948409.png" alt="image-20210711133948409" style="zoom:30%;" />
+<img src="/../img/assets_2019/image-20210711133948409.png" alt="image-20210711133948409" style="zoom:30%;" />
