modify：硬件加速GPU 补充对比

--- a/_posts/浏览器原理相关内容/2021-04-14-22 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-14-22 回流重绘+分层合成机制.md
@@ -157,5 +157,8 @@ typora-root-url: ..
 }
 ```
 
-使用 transform 或者 opacity 来实现动画效果, 这样只需要做合成层的合并就好了
+**使用 `transform` 或者 `opacity` 来实现动画效果** - **不会触发 layout 和 paint**, 这样只需要做合成层的合并就好了
 
+对比一下 `height: 200px` -> `height:100px` 和 `transform:scale(.5)` 的差异
+
+<img src="/../img/assets_2019/image-20210711163012822.png" alt="image-20210711163012822" style="zoom:30%;" />
