add：bind/apply/call及其实现

--- a/_posts/2019-07-08-面试题整理 .md
+++ b/_posts/2019-07-08-面试题整理 .md
@@ -1032,16 +1032,6 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 
 
 
-
-
-### 15、学过哪些基础框架？
-
-前端框架：Vue、AngularJS、React （还有其他的话请补充，只列主流的）
-
-界面框架/UI框架：Bootstrap
-
-
-
 ### 16、jQuery中绑定事件用的on和bind有什么区别？
 
 ```javascript
@@ -1158,24 +1148,6 @@ $("#button1").unbind("click.a");
 
 
 
-
-### 17.从输入URL到页面加载完成，发生了什么：segmentfault上面有篇博客：[从输入url到页面展现发生了什么？](https://segmentfault.com/a/1190000013522717)
-
-域名解析 --> 
-
-根据地址栏输入的地址向[DNS（Domain Name System）](https://zh.wikipedia.org/wiki/域名系统)查询IP -->
-
-通过IP向服务器发起TCP连接 -->
-
-发起TCP的3次握手 -->
-
- 建立TCP连接后发起http请求 -->
-
- 服务器响应http请求，浏览器得到html代码 --> 
-
-浏览器解析html代码，并请求html代码中的资源（如js、css、图片等） --> 
-
-浏览器对页面进行渲染呈现给用户
 
 
 
@@ -1473,8 +1445,6 @@ setTimeout(() => {
 
 28. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
 
-29. 数据结构、算法之类的了解吗
-
 30. 实现0.5px横线
 
 31. 盒子模型height
@@ -1517,7 +1487,7 @@ setTimeout(() => {
 
 48. react生命周期
 
-49. ==和===的区别
+49. `==`和`===`的区别
 
 50. null和undefined的区别
 
@@ -1535,13 +1505,11 @@ setTimeout(() => {
 
 57. MVVM的原理
 
-58. 输入http到渲染到页面，发生了什么
-
 59. 创建一个对象有哪几种方法（字面量、构造函数、工厂模式）
 
 60. 基本数据类型和引用数据类型的区别
 
-61. 箭头函数和普通函数的区别，普通函数this的指向问题
+61. 箭头函数和数的区别，普通函数this的指向问题
 
 62. set有那些用处？
 
